--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 {%block head_title %}homepage-{{block.super}}{%endblock head_title %}
 {% block content%}
-<p>hello again</p> 
+<h1 className="text-lg font-bold underline">
+        {{ page_title}}
+</h1>
+<p>hello again</p>
 
 {% include 'snippets/welcome-user-msg.html'%}
 
