--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -3,12 +3,14 @@
 <html>
 <head>
     <title>{%block head_title %}SaaS{%endblock head_title %}</title>
+    {% include 'base/css.html' %}
 </head>
 <body>
+    {% include 'nav/navbar.html' %}
     <h1>{{page_title}}</h1>
     {% block content %}
-    asdad
     {% endblock content %}
+    {% include 'base/js.html' %}
 </body>
 
 
